# rust-lng

lab1/fees/: README.md
lab1/fees/server/src/: go.mod
lab1/fees/server/src/cmd/: main.go
lab1/fees/server/src/domain/: hello.go
lab1/fees/server/src/handlers/: hello_handler.go
lab1/fees/server/src/ports/: hello_port.go
lab1/fees/server/src/repositories/: hello_repository.go
lab1/fees/server/src/server/: server.go
lab1/fees/server/src/services/: hello_service.go
lab2/: Cargo.toml  README.md
lab2/src/: main.rs
lab3/: Cargo.toml
lab3/src/: main.rs
lab3/src/components/: crud.rs  data.rs  mod.rs
lab4/: Cargo.toml
lab4-client/: .env  .gitignore  main.py
lab4/src/: main.rs
