[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

[dependencies]
evalexpr = "12.0.0"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_6"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# graphene-sys = "0.20.4"
# gtk = { version = "0.9.2", package = "gtk4" }
# gtk4 = { version = "0.18.1", package = "gtk" }
# gtk4-sys = "0.9.2"
# pango = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "pango" }